--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Bitcoin testnet parameters for webcoin",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "standard index.js src && tape test.js | faucet",
     "build": "rm -rf lib && babel --presets es2015 src -d lib",
     "source": "rm -rf lib && ln -s src lib",
     "prepublish": "npm run build",
@@ -25,6 +25,10 @@
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
-    "babel-preset-es2015": "^6.3.13"
+    "babel-preset-es2015": "^6.3.13",
+    "faucet": "0.0.1",
+    "standard": "^6.0.8",
+    "tape": "^4.5.1",
+    "webcoin-param-tests": "0.0.2"
   }
 }
