--- a/package.json
+++ b/package.json
@@ -30,5 +30,13 @@
     "standard": "^6.0.8",
     "tape": "^4.5.1",
     "webcoin-param-tests": "^0.0.3"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mappum/webcoin-bitcoin-testnet.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mappum/webcoin-bitcoin-testnet/issues"
+  },
+  "homepage": "https://github.com/mappum/webcoin-bitcoin-testnet#readme"
 }
