Disable slow safari tests for now

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   - NODE=4
   - BROWSER=chrome
   - BROWSER=firefox
-  - BROWSER=safari
+  # - BROWSER=safari
   - BROWSER=android
   - BROWSER=iphone
   global:
